# on-chain-identity-gateway

.github/workflows/: program-auto-publish.yml
miraland/: package.json
miraland/gatekeeper-cli/: README.md
miraland/gatekeeper-cli/src/commands/: verify.ts
miraland/gatekeeper-lib/: package.json
miraland/gatekeeper-lib/src/util/: constants.ts
miraland/gateway-ts/src/lib/: constants.ts
miraland/integration-lib/: Cargo.toml  README.md
miraland/integration-lib/src/: borsh.rs  instruction.rs  lib.rs  state.rs  test_utils.rs
miraland/program/: Cargo.toml  program-id.md
miraland/program/cli/: Cargo.toml
miraland/program/cli/src/: lib.rs
miraland/program/src/: lib.rs  processor.rs  state.rs
miraland/program/tests/: functional.rs  gateway_context.rs
miraland/program_v2/: Anchor.toml  package.json
miraland/program_v2/programs/gateway_v2/: Cargo.toml  README.md
miraland/program_v2/programs/gateway_v2/src/: lib.rs
