[package]
name = "miraland-gateway"
version = "0.1.0"
description = "Miraland on-chain identity gateway derived from Solana on-chain identity gateway"
repository = "https://github.com/miracle-land/on-chain-identity-gateway"
authors = ["Identity.com <daniel@identity.com>"]
license = "MIT"
edition = "2018"
keywords = ["miraland", "identity",  "gateway", "civic"]
homepage = "https://www.identity.com"


[features]
program = []
client = []
test = []
default = ["program"]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
miraland-program = "1.14.17-rc5"
mln-did = { version = "3.2.0", features = [ "no-entrypoint" ]}
num-derive = "0.3"
num-traits = "0.2.12"
thiserror = "1.0.20"
bitflags = "1.3.2"

[dev-dependencies]
miraland-sdk = "1.14.17-rc5"
# These are older as solana sdk relies on rand_core 0.5.1
rand = "0.7.3"
rand_chacha = "0.2.2"
miraland-gateway-program = { path = "../program" }
