[package]
name = "miraland-gateway-program"
version = "0.1.3"
description = "OCIV Gateway Program"
authors = ["Daniel Kelleher <daniel@identity.com>"]
repository = "https://github.com/miracle-land/on-chain-identity-gateway"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
# borsh = "0.9.1"
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
num-derive = "0.3"
num-traits = "0.2"
miraland-program = "1.18.2"
miraland-gateway = { path = "../integration-lib" }
thiserror = "1.0"
zeroize = "=1.3.0"

[dev-dependencies]
miraland-program-test = "1.18.2"
miraland-sdk = "1.18.2"
tokio = { version = "1.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
name = "miraland_gateway_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
