[package]
name = "miraland-anchor-gateway"
version = "2.0.5"
description = "Miraland Identity Gateway"
edition = "2021"
authors = ["Identity.com <daniel@identity.com>"]
license = "MIT"
keywords = ["miraland", "identity", "gateway"]
homepage = "https://www.identity.com"

[lib]
crate-type = ["cdylib", "lib"]
name = "miraland_anchor_gateway"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
solarti-anchor-lang = "0.26.1"
bitflags = "1.3.2"
# borsh = "0.9.3"
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
solarti-anchor-spl = "0.26.1"
spl-token = { package = "solarti-token", version = "4.0", features = ["no-entrypoint"] }
miraland-program = "1.18.2"